--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         run: npm install
       -
         name: Build App 
-        run: npm build
+        run: npm run build
       -
         name: Login to Docker Hub
         uses: azure/docker-login@v1
