--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,3 +36,27 @@ jobs:
           push: true
           tags: ${{ secrets.AZURE_URL }}/devops-app:${{github.sha}}
           file: Dockerfile
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-22.04
+    steps:
+      - name: 'Login via Azure CLI'
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: 'Deploy to Azure Container Instantces'
+        uses: 'azure/aci-deploy@v1'
+        with:
+          resoure-group: devops
+          dns-name-label: devops-app
+          image:  ${{ secrets.AZURE_URL }}/devops-app:${{github.sha}}
+          cpu: 1
+          memory: 0.5
+          registry-username: ${{ secrets.ACR_USERNAME }}
+          registry-password: ${{ secrets.ACR_PASSWORD }}
+          name: devopsapp
+          location: 'francecentral'
+          
+    
