--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   push:
 
 jobs:
-  docker:
+  build:
+    name: Build and push
     runs-on: ubuntu-latest
 
     defaults:
@@ -45,7 +46,7 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
+  
       - name: 'Deploy to Azure Container Instantces'
         uses: 'azure/aci-deploy@v1'
         with:
@@ -58,5 +59,5 @@ jobs:
           registry-password: ${{ secrets.ACR_PASSWORD }}
           name: devopsapp
           location: 'francecentral'
-          
-    
+            
+      
